changed phonenumber  in footer and fixed gap in signup form

--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -140,7 +140,6 @@
   .form-container {
     flex-direction: row;
     justify-content: space-between;
-    gap: initial;
   }
 
   .form-container > h1 {
